refactor(server): load webui scripts individually instead of combining
Replace the combined.js/combined.css mechanism with individual
<script> and <link> tags in index.html. Remove the handle_combined_file
handler and its routes from the server.

--- a/crates/nzbg-server/webui/index.html
+++ b/crates/nzbg-server/webui/index.html
@@ -60,22 +60,30 @@
 	<script language="javascript" type="text/javascript" src="system-health.js"></script>
 	%end% -->
 
-	<!-- Loading all javascript files from libraries and NZBGet in one request -->
-	<!-- %if-not-debug% -->
-	<script language="javascript" type="text/javascript" src="combined.js?lib/jquery.min.js+lib/bootstrap.min.js+lib/raphael.min.js+lib/elycharts.min.js+datetime.js+fasttable.js+index.js+util.js+downloads.js+edit.js+status.js+messages.js+history.js+upload.js+config.js+feed.js+system-info.js+statistics.js+system-health.js"></script>
-	<!-- %end% -->
+	<script language="javascript" type="text/javascript" src="lib/jquery.min.js"></script>
+	<script language="javascript" type="text/javascript" src="lib/bootstrap.min.js"></script>
+	<script language="javascript" type="text/javascript" src="lib/raphael.min.js"></script>
+	<script language="javascript" type="text/javascript" src="lib/elycharts.min.js"></script>
+	<script language="javascript" type="text/javascript" src="datetime.js"></script>
+	<script language="javascript" type="text/javascript" src="fasttable.js"></script>
+	<script language="javascript" type="text/javascript" src="index.js"></script>
+	<script language="javascript" type="text/javascript" src="util.js"></script>
+	<script language="javascript" type="text/javascript" src="downloads.js"></script>
+	<script language="javascript" type="text/javascript" src="edit.js"></script>
+	<script language="javascript" type="text/javascript" src="status.js"></script>
+	<script language="javascript" type="text/javascript" src="messages.js"></script>
+	<script language="javascript" type="text/javascript" src="history.js"></script>
+	<script language="javascript" type="text/javascript" src="upload.js"></script>
+	<script language="javascript" type="text/javascript" src="config.js"></script>
+	<script language="javascript" type="text/javascript" src="feed.js"></script>
+	<script language="javascript" type="text/javascript" src="system-info.js"></script>
+	<script language="javascript" type="text/javascript" src="statistics.js"></script>
+	<script language="javascript" type="text/javascript" src="system-health.js"></script>
 
 	<style>.hide{display:none;}</style>
-	<!-- %if-debug%
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
-	<link id="ThemeStyleSheet" rel="stylesheet" type="text/css" href="light-theme.css"> 
-	%end% -->
-	<!-- Loading all css files from libraries and NZBGet in one request -->
-	<!-- %if-not-debug% -->
-	<link rel="stylesheet" type="text/css" href="combined.css?lib/bootstrap.css+style.css" />
-	<link id="ThemeStyleSheet" rel="stylesheet" type="text/css" href="light-theme.css"> 
-	<!-- %end% -->
+	<link id="ThemeStyleSheet" rel="stylesheet" type="text/css" href="light-theme.css">
 
 	<!-- fav and touch icons -->
 
