feat(webui): replace logo with bergamot icon
Replace the NZBGet sprite-based logo with a standalone bergamot fruit
icon. Update favicons to match. Icon by YI-PIN from Flaticon, used
under their free license with attribution added to the About section.

--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -112,7 +112,7 @@
 		<div class="container-fluid navbar-container" id="NavbarContainer">
 
 			<!-- LOGO -->
-			<div id="Logo" onclick="$('#DownloadsTabLink').click()"><i class="img-logo"></i></div>
+			<div id="Logo" onclick="$('#DownloadsTabLink').click()"><img src="img/bergamot-logo.png" alt="Bergamot" width="38" height="38" class="logo-img"></div>
 
 			<!-- PLAY/PAUSE-BUTTON -->
 			<div id="PlayBlock">
@@ -697,6 +697,12 @@
 												</li>
 											</ul>
 										</nav>
+									</section>
+
+									<section aria-labelledby="attribution-heading">
+										<h3 id="attribution-heading">ATTRIBUTION</h3>
+										<hr>
+										<p>Bergamot icon by <a href="https://www.flaticon.com/authors/yi-pin" target="_blank" rel="noopener noreferrer">YI-PIN</a> from <a href="https://www.flaticon.com" target="_blank" rel="noopener noreferrer">Flaticon</a>.</p>
 									</section>
 								</div>
 
