style(webui): use 2x logo in navbar for retina sharpness

--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -112,7 +112,7 @@
 		<div class="container-fluid navbar-container" id="NavbarContainer">
 
 			<!-- LOGO -->
-			<div id="Logo" onclick="$('#DownloadsTabLink').click()"><img src="img/bergamot-logo.png" alt="Bergamot" width="38" height="38" class="logo-img"></div>
+			<div id="Logo" onclick="$('#DownloadsTabLink').click()"><img src="img/bergamot-logo-2x.png" alt="Bergamot" width="38" height="38" class="logo-img"></div>
 
 			<!-- PLAY/PAUSE-BUTTON -->
 			<div id="PlayBlock">
