--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -690,7 +690,7 @@
 										<fieldset id="ConfigData">
 
 											<section id="Config-SystemInfo" class="control-group config-static config-status">
-												<div class="modal hide in" id="SpeedTest_Stats">
+												<div class="modal pico hide in" id="SpeedTest_Stats">
 													<div>
 														<div class="modal-header">
 															<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -722,7 +722,7 @@
 													</div>
 												</div>
 
-												<div class="modal hide in" id="DiskSpeedTest_Modal">
+												<div class="modal pico hide in" id="DiskSpeedTest_Modal">
 													<div>
 														<div class="modal-header">
 															<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -1178,7 +1178,7 @@
 
 <!-- *** STATISTICS ************************************************************ -->
 
-<div class="modal modal-mini no-footer hide" id="StatDialog">
+<div class="modal pico modal-mini no-footer hide" id="StatDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<a id="StatDialog_Back" href="#" title="Back"><i class="material-icon">arrow_left_alt</i></a>
@@ -1274,7 +1274,7 @@
 
 <!-- *** CHART RANGE DIALOG ***************************************************** -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="StatRangeDialog">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="StatRangeDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Choose period</h3>
@@ -1304,7 +1304,7 @@
 
 <!-- *** LIMIT DIALOG ************************************************************ -->
 
-<div class="modal modal-small modal-padded-small hide" id="LimitDialog">
+<div class="modal pico modal-small modal-padded-small hide" id="LimitDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Speed Limit</h3>
@@ -1348,7 +1348,7 @@
 
 <!-- *** PAUSE FOR X MINUTES ***************************************************** -->
 
-<div class="modal modal-mini modal-padded hide" id="ScheduledPauseDialog">
+<div class="modal pico modal-mini modal-padded hide" id="ScheduledPauseDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Temporary Pause</h3>
@@ -1389,7 +1389,7 @@
 
 <!-- *** SAVE FILTER ***************************************************** -->
 
-<div class="modal modal-mini hide" id="SaveFilterDialog">
+<div class="modal pico modal-mini hide" id="SaveFilterDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Save Filter</h3>
@@ -1418,7 +1418,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING PAUSE OPTIONS ************************************************************ -->
 
-<div class="modal no-footer hide" id="PauseHelp">
+<div class="modal pico no-footer hide" id="PauseHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Explaining pause options</h3>
@@ -1432,7 +1432,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING SCHEDULED PAUSE FORMATS ************************************************************ -->
 
-<div class="modal no-footer hide" id="ScheduledPauseDialogHelp">
+<div class="modal pico no-footer hide" id="ScheduledPauseDialogHelp">
 	<div class="modal-header">
 		<a class="close" href="#" data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Help: Explaining temporary pause time formats</h3>
@@ -1493,7 +1493,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING QUICK SEARCH ************************************************************ -->
 
-<div class="modal no-footer hide" id="QuickFilterHelp">
+<div class="modal pico no-footer hide" id="QuickFilterHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Explaining quick filter</h3>
@@ -1531,7 +1531,7 @@
 
 <!-- *** EDIT DOWNLOAD DIALOG ************************************************************ -->
 
-<div class="modal hide" id="DownloadsEditDialog">
+<div class="modal pico hide" id="DownloadsEditDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<a class="back" id="DownloadsEdit_Back" href="#" title="Back"><i class="material-icon">arrow_left_alt</i></a>
@@ -1588,15 +1588,11 @@
 							</div>
 						</div>
 
-						<div class="control-group">
-							<div class="controls">
-								<div class="modal-bottom-toolbar">
-									<button class="btn btn-default" data-tab="DownloadsEdit_FileTab" data-fullscreen="true" id="DownloadsEdit_File" title="File list">Files <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-									<button class="btn btn-default" data-tab="DownloadsEdit_ParamTab" id="DownloadsEdit_Param" title="Post-processing parameters">Postprocess <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-									<button class="btn btn-default" data-tab="DownloadsEdit_DupeTab" id="DownloadsEdit_Dupe" title="Duplicate properties">Dupe <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-									<button class="btn btn-default" data-tab="DownloadsEdit_LogTab" data-fullscreen="true" id="DownloadsEdit_Log" title="Post-processing messages">Log <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-								</div>
-							</div>
+						<div class="modal-bottom-toolbar">
+							<button class="btn btn-default" data-tab="DownloadsEdit_FileTab" data-fullscreen="true" id="DownloadsEdit_File" title="File list">Files <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
+							<button class="btn btn-default" data-tab="DownloadsEdit_ParamTab" id="DownloadsEdit_Param" title="Post-processing parameters">Postprocess <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
+							<button class="btn btn-default" data-tab="DownloadsEdit_DupeTab" id="DownloadsEdit_Dupe" title="Duplicate properties">Dupe <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
+							<button class="btn btn-default" data-tab="DownloadsEdit_LogTab" data-fullscreen="true" id="DownloadsEdit_Log" title="Post-processing messages">Log <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
 						</div>
 
 					</fieldset>
@@ -1789,7 +1785,7 @@
 
 <!-- *** MULTI EDIT DOWNLOAD DIALOG ************************************************************ -->
 
-<div class="modal hide" id="DownloadsMultiDialog">
+<div class="modal pico hide" id="DownloadsMultiDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3 id ="DownloadsMulti_Title">Multiple records</h3>
@@ -1878,7 +1874,7 @@
 
 <!-- *** MERGE DOWNLOADS DIALOG ************************************************************ -->
 
-<div class="modal modal-padded hide" id="DownloadsMergeDialog">
+<div class="modal pico modal-padded hide" id="DownloadsMergeDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Merge Downloads</h3>
@@ -1906,7 +1902,7 @@
 
 <!-- *** SPLIT DOWNLOAD DIALOG ************************************************************ -->
 
-<div class="modal modal-padded hide" id="DownloadsSplitDialog">
+<div class="modal pico modal-padded hide" id="DownloadsSplitDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Split Download</h3>
@@ -1942,7 +1938,7 @@
 
 <!-- *** HISTORY EDIT DIALOG ************************************************************ -->
 
-<div class="modal hide" id="HistoryEditDialog">
+<div class="modal pico hide" id="HistoryEditDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<a class="back" id="HistoryEdit_Back" href="#" title="Back"><i class="material-icon">arrow_left_alt</i></a>
@@ -2009,14 +2005,10 @@
 							</div>
 						</div>
 
-						<div class="control-group">
-							<div class="controls">
-								<div class="modal-bottom-toolbar">
-									<button class="btn btn-default" data-tab="HistoryEdit_ParamTab" id="HistoryEdit_Param" title="Post-processing parameters">Postprocess <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-									<button class="btn btn-default" data-tab="HistoryEdit_DupeTab" id="HistoryEdit_Dupe" title="Duplicate properties">Dupe <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-									<button class="btn btn-default" data-tab="HistoryEdit_LogTab" data-fullscreen="true" id="HistoryEdit_Log" title="Post-processing messages">Log <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
-								</div>
-							</div>
+						<div class="modal-bottom-toolbar">
+							<button class="btn btn-default" data-tab="HistoryEdit_ParamTab" id="HistoryEdit_Param" title="Post-processing parameters">Postprocess <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
+							<button class="btn btn-default" data-tab="HistoryEdit_DupeTab" id="HistoryEdit_Dupe" title="Duplicate properties">Dupe <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
+							<button class="btn btn-default" data-tab="HistoryEdit_LogTab" data-fullscreen="true" id="HistoryEdit_Log" title="Post-processing messages">Log <i class="material-icon" style="opacity:0.6;">arrow_right_alt</i></button>
 						</div>
 
 					</fieldset>
@@ -2178,7 +2170,7 @@
 
 <!-- *** FEED VIEW DIALOG ************************************************************ -->
 
-<div class="modal hide modal-max" id="FeedDialog">
+<div class="modal pico hide modal-max" id="FeedDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3 id ="FeedDialog_Title">Title</h3>
@@ -2240,7 +2232,7 @@
 
 <!-- *** FEED FILTER DIALOG ************************************************************ -->
 
-<div class="modal hide modal-max" id="FeedFilterDialog">
+<div class="modal pico hide modal-max" id="FeedFilterDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3 id ="FeedFilterDialog_Title">Title</h3>
@@ -2329,7 +2321,7 @@
 
 <!-- *** QUICK HELP: FEED FILTER ************************************************************ -->
 
-<div class="modal no-footer hide" id="FeedFilterDialogHelp">
+<div class="modal pico no-footer hide" id="FeedFilterDialogHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Filter for RSS Feed</h3>
@@ -2531,7 +2523,7 @@
 
 <!-- *** CONFIRMATION DIALOG ************************************************************ -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="ConfirmDialog">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="ConfirmDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3 id="ConfirmDialog_Title">Title</h3>
@@ -2577,7 +2569,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING DELETE DOWNLAODS OPTIONS ********************************* -->
 
-<div class="modal no-footer modal-small modal-center hide" id="DownloadsDeleteHelp">
+<div class="modal pico no-footer modal-small modal-center hide" id="DownloadsDeleteHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Explaining delete options</h3>
@@ -2630,7 +2622,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING DELETE FROM HISTORY OPTIONS ********************************** -->
 
-<div class="modal no-footer modal-small modal-center hide" id="HistoryDeleteHelp">
+<div class="modal pico no-footer modal-small modal-center hide" id="HistoryDeleteHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Explaining delete options</h3>
@@ -2784,7 +2776,7 @@
 
 <!-- *** PURGE HISTORY DIALOG ************************************** -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="PurgeHistoryDialog">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="PurgeHistoryDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Purging history</h3>
@@ -2810,7 +2802,7 @@
 
 <!-- *** ADD FILES DIALOG ************************************************************ -->
 
-<div class="modal hide" id="AddDialog">
+<div class="modal pico hide" id="AddDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Add NZB-Files to Download Queue</h3>
@@ -2889,7 +2881,7 @@
 
 <!-- *** QUICK HELP: ADD FILES ************************************************************ -->
 
-<div class="modal no-footer hide" id="AddDialogHelp">
+<div class="modal pico no-footer hide" id="AddDialogHelp">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Tips for adding NZB-Files</h3>
@@ -2920,7 +2912,7 @@
 
 <!-- *** ADD FILE PARAMS DIALOG ************************************************************ -->
 
-<div class="modal modal-2 hide" id="AddParamDialog">
+<div class="modal pico modal-2 hide" id="AddParamDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3 id="AddParamDialog_Title">File Properties</h3>
@@ -2977,7 +2969,7 @@
 
 <!-- *** CHOOSE SCRIPT DIALOG ****************************************************** -->
 
-<div class="modal modal-padded hide" id="ScriptListDialog">
+<div class="modal pico modal-padded hide" id="ScriptListDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3 id="ScriptListDialog_Title">Choose scripts</h3>
@@ -3015,7 +3007,7 @@
 
 <!-- *** RESTORE SETTINGS DIALOG ****************************************************** -->
 
-<div class="modal modal-padded hide" id="RestoreSettingsDialog">
+<div class="modal pico modal-padded hide" id="RestoreSettingsDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Restore Settings</h3>
@@ -3050,7 +3042,7 @@
 
 <!-- *** SETTINGS RESTORED DIALOG ************************************************** -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="SettingsRestoredDialog">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="SettingsRestoredDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Settings restored</h3>
@@ -3066,7 +3058,7 @@
 
 <!-- *** LEAVE CONFIG TAB CONFIRMATION DIALOG ************************************** -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="LeaveConfigDialog">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="LeaveConfigDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 		<h3>Not saved changes</h3>
@@ -3089,7 +3081,7 @@
 
 <!-- *** QUICK HELP: New Configuration Option ************************************************** -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="ConfigNewOptionHelp">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="ConfigNewOptionHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: New configuration option</h3>
@@ -3105,7 +3097,7 @@
 
 <!-- *** UPDATE DIALOG ************************************************** -->
 
-<div class="modal modal-padded-small modal-center hide" id="UpdateDialog">
+<div class="modal pico modal-padded-small modal-center hide" id="UpdateDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Update NZBGet</h3>
@@ -3162,7 +3154,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING UPDATE OPTIONS ************************************************************ -->
 
-<div class="modal no-footer hide" id="UpdateDialogHelp">
+<div class="modal pico no-footer hide" id="UpdateDialogHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Help: Explaining update options</h3>
@@ -3178,7 +3170,7 @@
 	
 <!-- *** INSTALL DIALOG ************************************************** -->
 
-<div class="modal modal-center hide log-dialog" id="UpdateProgressDialog">
+<div class="modal pico modal-center hide log-dialog" id="UpdateProgressDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3>Updating NZBGet</h3>
@@ -3191,7 +3183,7 @@
 
 <!-- *** EXEC SCRIPT DIALOG ************************************************** -->
 
-<div class="modal modal-center hide log-dialog" id="ExecScriptDialog">
+<div class="modal pico modal-center hide log-dialog" id="ExecScriptDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3 id="ExecScriptDialog_Title">Executing script</h3>
@@ -3208,7 +3200,7 @@
 
 <!-- *** ERROR DIALOG ************************************************** -->
 
-<div class="modal modal-mini modal-padded modal-center hide" id="AlertDialog">
+<div class="modal pico modal-mini modal-padded modal-center hide" id="AlertDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="material-icon">close</i></a>
 	<h3 id="AlertDialog_Title">Title</h3>
@@ -3275,7 +3267,7 @@
 
 <!-- *** WEB LOGIN DIALOG ************************************** -->
 
-<div class="modal modal-mini modal-center hide" id="LoginDialog">
+<div class="modal pico modal-mini modal-center hide" id="LoginDialog">
 	<div class="modal-header">
 		<h3>NZBGet Login</h3>
 	</div>
