fix(webui): prevent time column wrapping in messages table
Replace fixed 170px width with white-space: nowrap and width: 1% so
the column sizes to fit its content without wrapping onto two lines.

--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -493,7 +493,7 @@
 			<table class="table table-striped table-bordered datatable" id="MessagesTable">
 				<thead><tr>
 					<th width="60px">Kind</th>
-					<th width="170px" class="text-center">Time</th>
+					<th class="text-center" style="white-space: nowrap; width: 1%">Time</th>
 					<th>Text</th>
 				</tr></thead>
 				<tbody></tbody>
