--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -34,34 +34,34 @@
 	
 
 	<!-- Libraries -->
-	<script language="javascript" type="text/javascript" src="lib/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="lib/uPlot.min.css" />
-	<script language="javascript" type="text/javascript" src="lib/uPlot.iife.min.js"></script>
+	<script src="lib/jquery.min.js"></script>
+	<link rel="stylesheet" href="lib/uPlot.min.css" />
+	<script src="lib/uPlot.iife.min.js"></script>
 
 	<!-- Bergamot UI (replaces Bootstrap JS) -->
-	<script language="javascript" type="text/javascript" src="ui.js"></script>
+	<script src="ui.js"></script>
 
 	<!-- Bergamot -->
-	<script language="javascript" type="text/javascript" src="datetime.js"></script>
-	<script language="javascript" type="text/javascript" src="fasttable.js"></script>
-	<script language="javascript" type="text/javascript" src="index.js"></script>
-	<script language="javascript" type="text/javascript" src="util.js"></script>
-	<script language="javascript" type="text/javascript" src="downloads.js"></script>
-	<script language="javascript" type="text/javascript" src="edit.js"></script>
-	<script language="javascript" type="text/javascript" src="status.js"></script>
-	<script language="javascript" type="text/javascript" src="messages.js"></script>
-	<script language="javascript" type="text/javascript" src="history.js"></script>
-	<script language="javascript" type="text/javascript" src="upload.js"></script>
-	<script language="javascript" type="text/javascript" src="config.js"></script>
-	<script language="javascript" type="text/javascript" src="feed.js"></script>
-	<script language="javascript" type="text/javascript" src="system-info.js"></script>
-	<script language="javascript" type="text/javascript" src="statistics.js"></script>
-	<script language="javascript" type="text/javascript" src="system-health.js"></script>
+	<script src="datetime.js"></script>
+	<script src="fasttable.js"></script>
+	<script src="index.js"></script>
+	<script src="util.js"></script>
+	<script src="downloads.js"></script>
+	<script src="edit.js"></script>
+	<script src="status.js"></script>
+	<script src="messages.js"></script>
+	<script src="history.js"></script>
+	<script src="upload.js"></script>
+	<script src="config.js"></script>
+	<script src="feed.js"></script>
+	<script src="system-info.js"></script>
+	<script src="statistics.js"></script>
+	<script src="system-health.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="lib/pico.min.css" />
-	<link rel="stylesheet" type="text/css" href="bootstrap-compat.css" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
-	<link id="ThemeStyleSheet" rel="stylesheet" type="text/css" href="light-theme.css">
+	<link rel="stylesheet" href="lib/pico.min.css" />
+	<link rel="stylesheet" href="bootstrap-compat.css" />
+	<link rel="stylesheet" href="style.css" />
+	<link id="ThemeStyleSheet" rel="stylesheet" href="light-theme.css">
 
 	<!-- fav and touch icons -->
 
