fix(webui): fill viewport using semantic main element and flexbox
Change #MainContent from div to main for Pico CSS semantics. Use
flexbox column layout on body with flex:1 on main so it fills the
remaining viewport height after the navbar without overshooting.

Also expand priority column header from 'P' to 'Priority'.

--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -230,7 +230,7 @@
 
 <!-- *** CONTENT ************************************************************ -->
 
-<div class="container-fluid" id="MainContent">
+<main class="container-fluid" id="MainContent">
 
 	<div class="tab-content" style="display:none;" id="MainTabContent">
 
@@ -310,7 +310,7 @@
 				<thead>
 					<tr>
 						<th><div class="check img-check"></div></th>
-						<th class="priority-cell"><a href="#" onclick="Downloads.sort('priority', event)" title="Priority">P</a></th>
+						<th class="priority-cell"><a href="#" onclick="Downloads.sort('priority', event)" title="Priority">Priority</a></th>
 						<th width="102px">Status</th>
 						<th class="dropafter-cell" id="DownloadsTable_Name"><a href="#" onclick="Downloads.sort('name', event)">Name</a></th>
 						<th id="DownloadsTable_Category"><a href="#" onclick="Downloads.sort('category', event)">Category</a></th>
@@ -1158,7 +1158,7 @@
 		</div>
 
 	</div>
-</div>
+</main>
 
 <!-- *** STATISTICS ************************************************************ -->
 
